--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="new-round" (click)="presentNewRoundForm()" *ngIf="isCurrentUserLoggedIn">
+    <ion-tab-button tab="new-round" (click)="presentNewRoundForm()">
       <ion-icon name="add-circle-outline"></ion-icon>
       <ion-label>New Round</ion-label>
     </ion-tab-button>
