adding couorse logic and data service, show toast for added round

--- a/src/app/add-round/add-round.component.html
+++ b/src/app/add-round/add-round.component.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="round-input-fields">
     <div>
-      <h3> {{ isEdit ? 'Edit Round' : 'Add New Round' }}</h3>
+      <h3> {{ 'Add New Round' }}</h3>
     </div>
     <div>
       <ion-item>
